# tea-soft

./: Cargo.toml  README.md
.github/workflows/: tea.yml
benches/: tea16.rs  tea32.rs  tea64.rs
src/: dev.rs  impls.rs  lib.rs  simd.rs
tests/: lib.rs
tests/data/: tea16.blb  tea32.blb  tea64.blb
